--- a/Django_Docker/static/css/mystyle.css
+++ b/Django_Docker/static/css/mystyle.css
@@ -34,11 +34,12 @@ footer {
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     box-shadow: 0px 2px 0 rgba(36, 36, 36, 0.2), 2px 4px 6px rgba(33, 37, 41, 0.6);
 }
-.my-btn-common:hover, .my-btn-common:active {
+.my-btn-common:active {
+    transition: none;
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
-.my-check .btn-check:disabled + .my-btn-common, .my-btn-common:disabled {
-    transition: all 0.25s cubic-bezier(0.65, 0, 0.076, 1);;
+.my-check .btn-check:disabled + .my-btn-common, .my-btn-common:hover, .my-btn-common:disabled {
+    transition: all 0.25s cubic-bezier(0.65, 0, 0.076, 1);
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
 
