--- a/Django_Docker/toolkeeper_app/templates/common_history_create.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create.html
@@ -1,4 +1,4 @@
-<div id="check_list" style="overflow-y: scroll; height: 100%;">
+<div id="check_list" style="overflow: auto; height: 100%;">
     {% for item in items reversed %}
     <div class="row justify-content-around w-100 my-2">
         <div class="col-auto col-md-6" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
