--- a/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
@@ -22,6 +22,8 @@
     const threshold_conf = Number(document.getElementById("threshold_conf").innerText);
     
     const preview = document.getElementById("preview");
+    
+    const confirmation = document.getElementById("confirmation");
 
     // 描画状態を管理するフラグと座標を初期化
     let isDrawing = false;
@@ -41,9 +43,11 @@
 
 
     // バウンディングボックスの座標を初期化
+    let item_name = [];
     let x_min, x_max, y_min, y_max;
     let box_li = [];
     for (let i = 0; i < set.length; i++) {
+        item_name[i] = document.getElementById(`item_${i}_name`).innerText;
         box_li[i] = [0,0,0,0,0];
     }
 
@@ -96,7 +100,7 @@
             x_min_fit = box_x_min * x_fit;
             y_min_fit = box_y_min * y_fit;
             
-            check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
+            check_list.style.height = canvas.height;
             ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
         }
 
@@ -108,8 +112,25 @@
         console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
         console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
         console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
-        
     };
+
+    
+    function set_confirmation() {
+        if (isDrawing) return;
+        confirmation.innerHTML = null;
+        for (let i = 0; i < set.length; i++) {
+            if (!box_in[i].checked) {
+                if (confirmation.innerHTML) confirmation.innerHTML = `${confirmation.innerHTML}、`;
+                var tag = document.createElement('span');
+                tag.setAttribute('style', 'color: red;');
+                tag.innerText = `${item_name[i]}`;
+                confirmation.appendChild(tag);
+            }
+        }
+        if (confirmation.innerHTML) confirmation.innerHTML = `${confirmation.innerHTML} がチェックされていません。`;
+        else confirmation.innerHTML = '<span style="color: rgb(0, 220, 50)">すべてのアイテム</span> がチェック済みです。';
+    };
+
 
     // 選択済みのバウンディングボックスを描画
     function draw_box(order=-1) {
@@ -137,6 +158,7 @@
                 box_li[i][3] - box_li[i][1],
             );
         }
+        set_confirmation();
     };
 
     // 画像の読み込みが完了したらキャンバスに描画
@@ -154,7 +176,7 @@
         let x_min_fit = box_x_min * x_fit;
         let y_min_fit = box_y_min * y_fit;
 
-        check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
+        check_list.style.height = canvas.height;
 
         draw_box();
     };
@@ -192,7 +214,6 @@
             draw_box(order=-2);
         } else {
             submit.disabled = true;
-            draw_box();
         }
     }
 
