--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -40,11 +40,13 @@
             </div>
         </div>
         <div class="col-11 col-md-4">
-            {% if create == 0 %}
-                {% include 'common_history_add.html' %}
-            {% else %}
-                {% include 'common_history_create.html' %}
-            {% endif %}
+            <div class="d-inline-block d-md-block" id="check_list" style="overflow: auto; height: 100%;">
+                {% if create == 0 %}
+                    {% include 'common_history_add.html' %}
+                {% else %}
+                    {% include 'common_history_create.html' %}
+                {% endif %}
+            </div>
         </div>
     </div>
 
