--- a/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create_js.html
@@ -11,6 +11,7 @@
     const create = document.getElementById("create").innerText;
 
     const check_list = document.getElementById("check_list");
+    const switch_width = document.getElementById("switch_width");
 
     const box_x_min = Number(document.getElementById("box_x_min").innerText);
     const box_y_min = Number(document.getElementById("box_y_min").innerText);
@@ -67,17 +68,28 @@
     }
 
     function switch_scroll() {
-        if (window.innerWidth >= 576) {
-            var max_h = canvas.getBoundingClientRect().height;
-            check_list.style.overflowY = "scroll";
-            check_list.style.overflowX = "none";
+        if (window.innerWidth >= 768) {
+            var max_h = canvas.height;
+            switch_width.style.width = "auto";
+            for (let i = 0; i < set.length; i++) {
+                document.getElementById(`ctrl_${i}`).style.margin = "auto";
+            }
         }
         else {
-            var max_h = 130;
-            check_list.style.overflowY = "none";
-            check_list.style.overflowX = "scroll";
+            var max_h = 145;
+            switch_width.style.width = "850px";
+            for (let i = 0; i < set.length; i++) {
+                document.getElementById(`ctrl_${i}`).style.margin = "0 2px";
+            }
+        }
+        check_list.style.height = max_h;
+
+        for (let i = 0; i < set.length; i++) {
+            console.log(window.innerWidth);
+            console.log(document.getElementById(`ctrl_${i}`).style.width);
         }
     };
+
 
     function auto_fit() {
         if (canvas.width != preview.getBoundingClientRect().width.toFixed()) {
@@ -100,9 +112,10 @@
             x_min_fit = box_x_min * x_fit;
             y_min_fit = box_y_min * y_fit;
             
-            check_list.style.height = canvas.height;
             ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
         }
+        
+        switch_scroll();
 
         console.log(`preview.width:  ${preview.getBoundingClientRect().width} px`);
         console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
@@ -114,7 +127,7 @@
         console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
     };
 
-    
+
     function set_confirmation() {
         if (isDrawing) return;
         confirmation.innerHTML = null;
@@ -176,7 +189,7 @@
         let x_min_fit = box_x_min * x_fit;
         let y_min_fit = box_y_min * y_fit;
 
-        check_list.style.height = canvas.height;
+        auto_fit();
 
         draw_box();
     };
@@ -293,5 +306,27 @@
             submit.disabled = true;
         }
         out_box(i);
+    };
+
+
+    const width_xxl = 1400;
+    const width_xl = 1200;
+    const width_lg = 992;
+    const width_md = 768;
+    const width_sm = 576;
+
+    let width_class = window.innerWidth;
+
+    // ウィンドウのリサイズ時にスクロール状態を切り替える
+    window.onresize = () => {
+        if (width_class != width_xxl && window.innerWidth >= width_xxl) width_class = width_xxl;
+        else if (width_class != width_xl && window.innerWidth < width_xxl && window.innerWidth >= width_xl) width_class = width_xl;
+        else if (width_class != width_lg && window.innerWidth < width_xl && window.innerWidth >= width_lg) width_class = width_lg;
+        else if (width_class != width_md && window.innerWidth < width_lg && window.innerWidth >= width_md) width_class = width_md;
+        else if (width_class != width_sm && window.innerWidth < width_md) width_class = width_sm;
+        else return;
+
+        auto_fit();
+        draw_box();
     };
 </script>
