--- a/Django_Docker/toolkeeper_app/templates/common_history_check_list.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_check_list.html
@@ -1,5 +1,5 @@
-<div class="col-md-6" id="item_{{ forloop.counter0 }}_name" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
-<div class="col-md-auto my-check">
+<div class="col col-md-6" id="item_{{ forloop.counter0 }}_name" style="display:flex; align-items: center;">{{ item.item_name }}</div>
+<div class="col-auto my-check">
     {% if forloop.first %}
         <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set" checked>
     {% else %}
