--- a/Django_Docker/toolkeeper_app/templates/common_history_create.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create.html
@@ -1,12 +1,9 @@
 {% for item in items reversed %}
-<!-- <div class="row justify-content-around w-100 my-2">
-</div> -->
-{% include 'common_history_check_list.html' %}
-        
-<div class="my-check col-md-12 my-md-2 my-xl-2">
-    <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
-    <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
+<div class="row justify-content-around w-100 mt-4 mt-md-auto" id="ctrl_{{ forloop.counter0 }}">
+    {% include 'common_history_check_list.html' %}
+    <div class="my-check col-md-12 my-2 my-md-3">
+        <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
+        <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
+    </div>
 </div>
-<!-- <div class="row justify-content-around w-100">
-</div> -->
 {% endfor %}
