--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -40,8 +40,8 @@
             </div>
         </div>
         <div class="col-11 col-md-4">
-            <div id="check_list" style="overflow: auto;">
-                <div class="d-flex d-md-block" id="switch_width" style="height: 100%;">
+            <div class="position-relative" id="check_list" style="overflow: auto;">
+                <div class="position-absolute d-flex d-md-block" id="switch_width" style="height: 100%;">
                     {% if create == 0 %}
                         {% include 'common_history_add.html' %}
                     {% else %}
