--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -34,7 +34,7 @@
                         <div class="col">
                             <div class="card">
                                 <!--badge-->
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">履歴</div>
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem; font-size: 13px;">{{ history.group.group_name }}</div>
                                 <!-- Product details-->
                                 <div class="card-body">
                                     <div class="text-center">
@@ -46,14 +46,10 @@
                                             <br>
                                             <!-- 更新日時: {{ history.updated_at }}
                                             <br> -->
-                                            グループ: {{ history.group }}
+                                            ユーザー: {{ history.user }}
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Product actions-->
-                                <!-- <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'toolkeeper_app:history_detail' history.pk %}">詳細</a></div>
-                                </div> -->
                             </div>
                         </div>
                     </a>
